--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -332,6 +332,8 @@
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-radius: 50%;
         cursor: pointer;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
     }
 
     .modal-close-btn:hover {
@@ -593,9 +595,6 @@
         bottom: 0;
         left: 0;
 
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
         width: 100%;
         height: 70px;
         display: flex;
@@ -605,16 +604,15 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
-    .about-item:hover .about-overlay {
-        transform: translateY(0);
-    }
-
     .overlay-descr {
         font-family: 'Roboto';
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+
         color: #FFFFFF;
     }
 
@@ -686,6 +684,8 @@
         border-radius: 50%;
         width: 44px;
         height: 44px;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .social-media-link:hover .social-media-icon,
@@ -736,6 +736,8 @@
 
     .clients-icon {
         fill: #AFB1B8;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .clients-link {
@@ -751,8 +753,8 @@
         fill: #2196F3;
     }
 
-    .clients-item:hover .clients-link,
-    .clients-item:focus .clients-link {
+    .clients-item:hover > .clients-link,
+    .clients-item:focus > .clients-link {
         border: 1px solid #2196F3;
     }
 
@@ -814,6 +816,8 @@
         border-radius: 50%;
         width: 44px;
         height: 44px;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .footer-media-link:hover .footer-media-icon,
@@ -992,7 +996,7 @@
         text-align: center;
         letter-spacing: 0.03em;
         color: #FFFFFF;
-        background: var(--bg-color-second);
+        background-color: var(--bg-color-second);
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
         border-radius: 4px;
     }
@@ -1012,6 +1016,8 @@
         padding: 6px 22px;
         border: 0px;
         margin-left: 6px;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .photo-item {
@@ -1048,7 +1054,7 @@
         background: rgba(33, 150, 243, 0.9);
         padding: 63px 24px;
 
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .portfolio-descr {
         font-weight: 400;
